fix bug #60761 zlib.output_compression fails on refresh